engine-intent: fix the broken pipeline end-to-end and align with platform conventions
The review of the scaffold found the committed IntentEngineIT could not
pass; running it locally confirmed and surfaced three pipeline-killing
bugs plus a set of wrong assumptions. All fixed and the IT (now three
tests) passes locally:

- Registry prefix: artefact locations are registry-relative but
  IRepository paths are repository-absolute; generated output landed
  outside /registry/public where neither the IT nor any downstream
  synchronizer could see it. resolveProjectRoot now prepends
  IRepositoryStructure.PATH_REGISTRY_PUBLIC.
- Empty-model parse: IntentParser mapped the YAML through JsonHelper,
  whose Gson is configured with excludeFieldsWithoutExposeAnnotation();
  every un-annotated POJO field came back null and all six generators
  silently skipped. The parser now uses a plain Gson with
  LONG_OR_DOUBLE numbers (seed id: 1 stays "1" in CSV, not "1.0").
- Output location: model files are written at the project root next to
  app.intent (the layout of real-world codbex application projects and
  every platform fixture, and the only one the model-to-code template
  flow is proven to handle) - never under gen/, which the templates
  wipe on every regeneration. Writes go through the single
  writeModelFile surface; a post-pass scrub removes model files no
  longer backed by the intent and cleans them up when the .intent
  itself is deleted.
- Naming: the YAML name: field drives output base names and the
  physical table prefix (<INTENT>_<ENTITY>, e.g. ORDERS_ORDER) shared
  via IntentNaming across .edm dataName, .report baseTable and .csvim
  table - avoiding SQL reserved words and cross-project collisions.
- CSVIM file paths are project-qualified (/orders/countries.csv) as
  CsvimProcessor resolves them against /registry/public.
- EDM fidelity: required to-one relations are compositions (DEPENDENT +
  inherited transitive perspective, relationship* attributes on the FK
 